Updated Java Memory Management (markdown)